Text input with author styles (e.g. border) lacks focus indicator (non-natively styled inputs don't have outline by default)
Categories
(Core :: Layout: Form Controls, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox78 | --- | fixed |
People
(Reporter: fvsch, Assigned: emilio)
References
Details
(Keywords: access)
Attachments
(3 files)
| Reporter | ||
Comment 1•9 years ago
|
||
| Reporter | ||
Comment 6•9 years ago
|
||
| Reporter | ||
Comment 7•9 years ago
|
||
| Reporter | ||
Comment 8•9 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 9•5 years ago
|
||
I think we should style these with outline-style: auto and we should suppress the outline-style: auto rendering when themed.
| Assignee | ||
Comment 12•5 years ago
|
||
Adding some keywords since I've spent far more time looking for this bug than what I'd like.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 13•5 years ago
|
||
These elements handle focus on their own. They're right now not
having outlines because they specify background-color, which disables
theming, but that is about to change.
| Assignee | ||
Comment 14•5 years ago
|
||
This guarantees outline indicators for these elements even if not
natively styled.
Depends on D73855
| Assignee | ||
Updated•5 years ago
|
Comment 15•5 years ago
|
||
Updating the Accessibility Team's impact assessment to conform with the new triage guidelines. See https://wiki.mozilla.org/Accessibility/Triage for descriptions of these whiteboard flags.
Comment 16•5 years ago
|
||
Comment 17•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/40e959f28932
https://hg.mozilla.org/mozilla-central/rev/0010e22f0daf
Updated•2 years ago
|
Updated•2 years ago
|
Description
•