Bug 1311444 - Disable outline-style: auto rendering on themed widgets, and use it for elements for which we otherwise disable outlines by default. r=Jamie,jfkthame

This guarantees outline indicators for these elements even if not
natively styled.

Differential Revision: https://phabricator.services.mozilla.com/D73856